version/0.31/_sources/api/solver/_autosummary/settings/solar_calculator.rst.txt
:orphan:

.. _solar_calculator:

solar_calculator
================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.solar_calculator
    :show-inheritance:

.. rubric:: Attributes

============================================   =======================================================================================

Attribute                                                                                                                      Summary

============================================   =======================================================================================
:ref:`longitude <longitude>`                                                                                                Longitude.

:ref:`latitude <latitude>`                                                                                                   Latitude.

:ref:`timezone <timezone>`                         Time zone in terms of number of hours of (positive or negative) deviation from GMT.

:ref:`north_direction <north_direction>`                                                        North-direction in global coordinates.

:ref:`east_direction <east_direction>`                                                           East-direction in global coordinates.

:ref:`date_and_time <date_and_time>`                                                         Date and time for solar load calculation.

:ref:`calculator_method <calculator_method>`                                                            A method for solar calculator.

:ref:`sunshine_factor <sunshine_factor>`                                                                          The sunshine factor.

============================================   =======================================================================================

.. rubric:: Included in:

==============================   ================================

Parent                                                    Summary

==============================   ================================
:ref:`solar_load <solar_load>`       Activate a solar load model.

==============================   ================================

